--- a/Day01/index.html
+++ b/Day01/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Day 1</title>
 </head>
 <body>
         <h1>Day 1</h1>
-    
+        <h3>Git Flow</h3>
+        <ol>
+            <li>making sure you are up to date with (main/master/production branch)</li>
+            <li>create branch</li>
+            <li>commit changes</li>
+            <li>push changes</li>
+            <li>create pull request</li>
+            <li>merge pull request</li>
+        </ol>
 </body>
 </html>
