--- a/Day01/index.html
+++ b/Day01/index.html
@@ -13,10 +13,18 @@
         <ol>
             <li>making sure you are up to date with (main/master/production branch)</li>
             <li>create branch</li>
+            <li>make changes</li>
             <li>commit changes</li>
             <li>push changes</li>
             <li>create pull request</li>
             <li>merge pull request</li>
         </ol>
+
+        <div class="git-flow">
+            <li>local-main</li>
+            <li>local-feature</li>
+            <li>remote-feature</li>
+            <li>remote-main</li>
+        </div>
 </body>
 </html>
